[package]
name = "rfq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
http_req_wasi = { version = "0.10", features = ["wasmedge_ssl"] }
flowsnet-platform-sdk = "0.1"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt", "sync"] }
webhook-flows = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers-signers = "2.0.10"
ethers-core = "2.0.10"
wasmedge_rustls_api = { version = "0.1", features = [ "tokio_async" ] }
reqwest_wasi = { version = "0.11", features = ["wasmedge-tls"] }
hyper_wasi = { version = "0.15", features = ["full"]}
rlp = "0.5.2"